--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 
 <head>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="./fontawesome-free-5.12.1-web/css/all.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Magra:700|Roboto:400,700&display=swap" rel="stylesheet">
-	<title>Juan's First Website</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="./fontawesome-free-5.12.1-web/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Magra:700|Roboto:400,700&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width">
+    <title>Juan's First Website</title>
 </head>
 
 <body>
